[package]
name = "torch_poetry_bootstrap"
version = "0.1.6"
edition = "2024"

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"

[[bin]]
name = "torch_poetry_bootstrap"
path = "src/main.rs"