[package]
name = "torch_poetry_bootstrap"
version = "0.1.16"
edition = "2024"
authors = ["Davide Rossotto <drossotto@crimson.ua.edu>"]
description = "A command-line tool to detect CUDA version and install the appropriate PyTorch wheel via Poetry."
license = "MIT"
readme = "README.md"
repository = "https://github.com/drossotto/torch_poetry_bootstrap"
keywords = ["pytorch", "poetry", "cuda", "bootstrap", "cli"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
toml_edit = "0.23.0"

[[bin]]
name = "torch_poetry_bootstrap"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
